tests/ternary/valid/multiple_ternary.amu
main :: () -> s32 {
    a:s32 = if(1 > 2) 3 else 4;
    b:s32 = if(1 > 2) 5 else 6;
    return a + b;
}