tests/ternary/invalid/malformed_ternary_2.amu
s32 main() {
    return if(1) if(2) if(3) else 4;
}